# synthetic-market-research

./: .gitignore  .replit  README.md  app.py  dependencies.txt  github_setup_commands.txt  package-lock.json  package.json  pyproject.toml
backend/: app.py  server.js
backend/scripts/: delete_project.py  generate_research.py  get_project.py  get_projects.py  save_project.py
backend/utils/: analysis.py
frontend/: index.html  server.js
frontend/src/: main.js
frontend/src/services/: api.js
utils/: analysis.py  database.py  focus_group.py  openai_service.py  persona_generator.py
