[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Synthetic Market Research Engine - MEVN Stack"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "nltk>=3.9.1",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
